Ejercicio de tablas

--- a/tareas_clase_7.html
+++ b/tareas_clase_7.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Tarea 7.1</h1>
+    <a href="index.html">Volver al inicio</a>
     <hr>
     <h2>Ejercicio 1</h2>
     <ol>
@@ -49,7 +50,7 @@
         <li><strong>Noticias</strong>
             <ul>
                 <li><a href="https://es.wikipedia.org/wiki/El_Padrino">El Padrino</a></li>
-                <li><a href="https://es.wikipedia.org/wiki/La_lista_de_Schindler">La Lista de Schindler</a></li>
+                <li><strong><a href="https://es.wikipedia.org/wiki/La_lista_de_Schindler">La Lista de Schindler</a></strong></li>
                 <li><a href="https://es.wikipedia.org/wiki/Pulp_Fiction">Pulp Fiction</a></li>
             </ul>
         </li>
