--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
    <h1>Tareas HTML</h1>
    <hr>
    <p>Haz clic en el siguiente enlace para ver las tareas:</p>
-   <a href="/tareas_clase_7.html">Ver Tareas Calse 7</a>
+   <ul>
+    <li><a href="/tareas_clase_7.html">Ver Tareas Calse 7</a></li>
+    <li><a href="/tablas.html">Ver Tareas Tablas</a></li>
+    <li></li>
+    <li></li>
+   </ul>
+   
 </body>
 </html>
