tablas tablas_complejas

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
    <ul>
     <li><a href="/tareas_clase_7.html">Ver Tareas Calse 7</a></li>
     <li><a href="/tablas.html">Ver Tareas Tablas</a></li>
+    <li><a href="/tablas_complejas.html">Ver Tareas tablas complejas</a></li>
     <li></li>
     <li></li>
    </ul>
