--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <li><a href="/tareas_clase_7.html">Ver Tareas Calse 7</a></li>
     <li><a href="/tablas.html">Ver Tareas Tablas</a></li>
     <li><a href="/tablas_complejas.html">Ver Tareas tablas complejas</a></li>
-    <li></li>
+    <li><a href="/formularios.html">Ver Tareas Formularios</a></li>
     <li></li>
    </ul>
    
